--- a/Illumina_QC/03-QC_tutorials.Rmd
+++ b/Illumina_QC/03-QC_tutorials.Rmd
@@ -221,4 +221,4 @@ Some things to note:
 - The amount of reads has significantly decreased due to quality control. This is expected, however this will need to be taken into account. If you do not have enough reads for the downstream analysis you will need to be less stringent on the trimming or filtering. What is the minimum number of reads required for downstream analysis? Unfortunately this depends on the specific analysis at hand. For genome assemblies generally the rule of thumb is you want at least 20 times as much bases in the reads as would be in the final assembly (based on the genome size of the organisms).
 - R2 quality is still worse than R1 quality. Again this is normal.
 - The quality controlled reads still drop below Q28 towards the end of the reads. This is pretty typical. You could be more stringent but as previously mentioned you may be removing too many reads.
-- The overrepresented sequences which were Illumina adapters needed for sequencing were removed by sickle. This is good as we don’t need them anymore.
+- The overrepresented sequences which were Illumina adapters needed for sequencing were removed by sickle. This is good as we don\’t need them anymore.
