--- a/long_read_qc/05-Practice.Rmd
+++ b/long_read_qc/05-Practice.Rmd
@@ -24,7 +24,7 @@ Run through all the ONT QC steps for these two datasets. Use all the same parame
 
 __Tips__: 
 
-+ If you are editing commands you previously ran it is best to change the outputs first so you don't accidentally overwrite previous results.
++ If you are editing commands you previously ran it is best to change the outputs first so you don\'t accidentally overwrite previous results.
 + You can run the command `firefox nanoplot/*/*NanoPlot*html`. This will open all the NanoPlot report htmls in one firefox window. There will be a separate tab for each report.
 
 __Questions__:
@@ -34,7 +34,7 @@ __Questions__:
 3. Which of the three datasets has the longest read in the initial data? How long is the read and what is it mean basecall quality score?
 4. Answer questions 1-3 for the porechopped data. Are the results of NanoStats significantly changed for any of the samples?
 5. Look at the NanoPlot results for the porechopped and NanoFiltered data using `-l 500` and `-q 10`.
-   + How many bases and reads are removed from the samples due to NanoFilt? 
+   + How many bases and reads are removed from the samples due to NanoFilt?
    + Are the parameters too stringent for some of the samples (losing too much data)?
    + Try out some different parameters until you are happy with the results.
    
