--- a/long_read_qc/04-ONT.Rmd
+++ b/long_read_qc/04-ONT.Rmd
@@ -68,14 +68,14 @@ The fastq file format is very consistent and so there is no real difference betw
 All fastq files will contain a number of lines divisible by 4. This is because each entry/sequence will take up four lines consisting of the following information:
 
 1. Header for fastq entry known as the fastq header. 
-    + This always begins with a __‘@’__
+    + This always begins with a __\'@\'__
     + This is where you might see the most difference between different data. Different machines and different public databases will use different formats for fastq headers.
 2. Sequence content
 3. Quality header 
     + Always begins with a \'+\'. Sometimes also contains the same information as fastq header.  
 4. Quality
     + Each base in the 2nd line will have a corresponding quality value in this line.
-    + Note this uses Phred encoding, of which there are different formats. Most, if not all, new files will use Phred+33 but be careful if you are using older data as it may use a different one. See the "Encoding" section in the following link for more info: https://en.wikipedia.org/wiki/FASTQ_format.
+    + Note this uses Phred encoding, of which there are different formats. Most, if not all, new files will use Phred+33 but be careful if you are using older data as it may use a different one. See the \"Encoding\" section in the following link for more info: https://en.wikipedia.org/wiki/FASTQ_format.
     +  NOTE: __\'@\'__ can be used as a quality value.
 
 An example of the information of one sequence/entry is:
@@ -291,9 +291,9 @@ Tip: To open a new terminal, right click VNC background -> Applications -> Shell
 After the __Summary Statistics__ section there is a __Plots__ section. This contains the plots:
 
 - __Histogram of read lengths__
-   - Histogram of \"Number of _reads_\" (y) against "Read length" (x).
+   - Histogram of \"Number of _reads_\" (y) against \"Read length\" (x).
 - __Histogram of read lengths after log transformations__
-   - Histogram of \"Number of _reads_\" (y) against log transformed "Read length" (x).
+   - Histogram of \"Number of _reads_\" (y) against log transformed \"Read length\" (x).
 - __Weighted Histogram of read lengths__
    - Histogram of \"Number of _bases_\" (y) against \"Read length\" (x).
 - __Weighted Histogram of read lengths after log transformation__
@@ -306,7 +306,7 @@ After the __Summary Statistics__ section there is a __Plots__ section. This cont
       - Click and drag up or down only to zoom into a specific part of the y axis. 
       - Click the home icon on the top right to reset the axes.
 - __Yield by length__
-   - Plot showing the \"Cumulative yield for minimal length\" (y) by "Read length" (x).
+   - Plot showing the \"Cumulative yield for minimal length\" (y) by \"Read length\" (x).
    - The cumulative yield is measured in Gigabases (billion bases).
    - This plot is useful to know how many bases you would retain if you filtered reads based on read length.
 - __Read lengths vs Average read quality plot using hexagonal bins__
@@ -323,7 +323,7 @@ Questions to be answered with the html file:
 - Approximately where is the highest density of reads in terms of read lengths and average read quality.
 - Roughly, do the longer reads have relatively high, medium, or low mean qualities?
 
-Using different input files will give you different plots. For more details please see the "Plots Generated" section on: https://github.com/wdecoster/NanoPlot.
+Using different input files will give you different plots. For more details please see the \"Plots Generated\" section on: https://github.com/wdecoster/NanoPlot.
 
 ### NanoFilt
 ```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
@@ -349,7 +349,7 @@ NanoFilt -l 500 -q 10 > \
 nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq
 ```
 
-Are the chosen options appropriate? Let's find out.
+Are the chosen options appropriate? Let\'s find out.
 
 ### Final check
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
@@ -380,7 +380,7 @@ Ultimately when quality checking we need to take into account how much data we a
 
 Depending on our application the quality of the reads may be less important, or the other way around. The is the same with the amount of reads and bases. What is needed will be clearer when you know what type of data you have. These considerations will be covered in our future workshops of the specific data types
 
-A quick example is data for a genome assembly. For this type of analysis we will want our number of bases to reach a certain coverage. We'll want a decent quality but a high coverage can help overcome lower quality (more on this in a future workshop). Generally for ONT assemblies you will want 20X - 100X coverage with a higher coverage producing a better assembly (100x coverage= 100bp sequencing data per 1bp of the genome size). Higher coverages may be worse as it can be too much information for an assembly algorithm to cope with.
+A quick example is data for a genome assembly. For this type of analysis we will want our number of bases to reach a certain coverage. We\'ll want a decent quality but a high coverage can help overcome lower quality (more on this in a future workshop). Generally for ONT assemblies you will want 20X - 100X coverage with a higher coverage producing a better assembly (100x coverage= 100bp sequencing data per 1bp of the genome size). Higher coverages may be worse as it can be too much information for an assembly algorithm to cope with.
 
 In addition to the amount of bases, the length of reads is also important. One read that is 10kbp long is most likely better than 10 reads that are each 1kbp long for a genome assembly. This is because less reads will need to be assembled.
 
@@ -397,14 +397,3 @@ Tips:
 
 + Make sure your new output paths have unique names.
 + Use NanoPlot results to compare the Q10 filtering to your own. The NanoStat part is especially helpful.
-
-
-
-
-
-
-
-
-
-
-
