--- a/long_read_qc/02-Intro.Rmd
+++ b/long_read_qc/02-Intro.Rmd
@@ -13,7 +13,13 @@ Check you have the directory.
 ls ~
 ```
 
-If you do not have this directory the command to copy it to your home directory is below.
+To add some more recently added PacBio files to yuor home directory run the following command:
+
+```{bash eval=FALSE}
+cp -r /pub39/tea/matthew/NEOF/QC_workshop/PB_QC ~/QC_workshop/PB_QC
+```
+
+Or if you do not have the \"QC_workshop\" directory at all the command to copy it all to your home directory is below.
 
 ```{bash eval=FALSE}
 cp -r /pub39/tea/matthew/NEOF/QC_workshop/ ~
